# AI-Editorial

./: README.md
editorial_generator/: .env  demo.py  problems.txt  prompts.py
final_editorial/: 1-Bisiesto-sencillo_editorial.md  A-cuanto-esta-el-queso_editorial.md  Adivina-El-Operador_editorial.md  Alumnos-Pobres_editorial.md  Amigos-y-Regalos_editorial.md  Among-Us_editorial.md  Anagramas-Especiales_editorial.md  Big-Mod_editorial.md  Buscando-Productos_editorial.md  CR20-Encriptando-mensajes_editorial.md  Calculos-iterativos-2_editorial.md  Camino-Pobre-de-Timmy_editorial.md  Compresion-de-cadenas_editorial.md  DFD-Diferencia-Horaria_editorial.md  Degrade_editorial.md  Degustando-chocolates_editorial.md  El-venderor-mas-rapido-del-oeste_editorial.md  En-busca-del-tesoro_editorial.md  Encontrando-Comida_editorial.md  Encontrando-combinaciones-oculta_editorial.md  Equipo-de-Basquetbol_editorial.md  Festejando_editorial.md  Figuras-y-palitos-_editorial.md  Garden_editorial.md  Menor-a-Mayor_editorial.md  Minijus_editorial.md  Promedio_positivos_neg_editorial.md  Rango-de-una-matriz_editorial.md  Reyes-al-ataque_editorial.md  S-UP-er-Market_editorial.md  Saltando-hacia-la-pared_editorial.md  Salvador-y-sus-alumnos_editorial.md  Sandia_editorial.md  (+9 more)
old_code-AIE/: .env  complete_demo.py  demo.py  editorial_updater.py  grader_test.py  pyproject.toml
old_code-AIE/editorial_generator/: __init__.py  ai.py  api.py  cli.py  logger.py
old_code-AIE/omegaup_editorial_generator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
(+12 files in other folders)
